--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_activity_main3">Main3Activity</string>
+    <string name="title_activity_main22">Main2Activity2</string>
+    <string name="title_activity_tes">tes</string>
 
 </resources>
