--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="akun">Akun</string>
+    <string name="button">Button</string>
+    <string name="ubah">Ubah</string>
+    <string name="bahasa">Bahasa</string>
+    <string name="settings">Settings</string>
+    <string name="title_activity_settings_">Settings_Activity</string>
+    <string name="simpan">Simpan</string>
+    <string name="insert_new_email">Insert new email...</string>
+    <string name="nama">Nama :</string>
+    <string name="no_hp">No. HP :</string>
+    <string name="alamat">Alamat :</string>
 
 </resources>
